task15/frontend-something-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: frontend-something
  namespace: farrukh-final
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
status:
  loadBalancer: {}
