task15/frontend-something-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: frontend-something-ingress
  namespace: farrukh-final
spec:
  ingressClassName: nginx
  rules:
  - host: front-f-sadatov.sts404.uz
    http:
      paths:
      - backend:
          service:
            name: frontend-something
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
